# ATR-Code

./: .gitignore  README.md  pyproject.toml
experiments/AConvNet/config/: AConvNet-CR.json  AConvNet-EOC-1-T72-132.json  AConvNet-EOC-1-T72-A64.json  AConvNet-EOC-1.json  AConvNet-EOC-2-CV.json  AConvNet-EOC-2-VV.json  AConvNet-MIXED.json  AConvNet-SOC.json  AConvNet-all.json
experiments/AConvNet/history/: Custom-AConvNet.txt  history-AConvNet-SOC.json
experiments/AConvNet/models/AConvNet-SOC/: model-001.pth  model-002.pth  model-003.pth  model-004.pth  model-005.pth
experiments/alexnet/: classification_report_all.txt  training_summary_all.txt
experiments/alexnet/config/: alexnet-EOC-1.json  alexnet-MIXED.json  alexnet-SOC.json  alexnet-all.json
experiments/alexnet/history/: history-alexnet-MIXED.json  history-alexnet-all.json
experiments/swin_transformer/config/: swin_transformer-SOC.json
notebooks/: Pipeline8_results.ipynb  inference_notebook_AConvNet.ipynb  inference_notebook_alexnet.ipynb
notebooks/experimental/: Pipeline_ViT_results.ipynb
scripts/: experimental_training_notebook.ipynb  script_colab_A_conv_net.ipynb  script_colab_alexnet.ipynb  script_colab_swin_transformer.ipynb  script_collab_alexnet.ipynb  train_AConvNet.py  train_alexnet.py  train_notebook.ipynb  train_swin_transformer.py
src/data/MSTAR/: generate_mstar_img_json_dataset.py  load.py  loader.py  preprocess.py
src/data/MSTAR/Alex/: lee_filter.py
src/data/MSTAR/Felipe/: Structure.txt  process_mstar_AConvNet.py  process_mstar_AConvnet.py  (+1 more)
src/models/: _base.py
src/models/AConvNet/: _base.py  network.py  simple_AConvNet.py
src/models/alexnet/: _base.py  network.py  optimize_hyperparams.py
src/models/swin_transformer/: network.py  utils.py
(+5 files in other folders)
